fix (Sidebar): responsive align for items in sidebar menu

--- a/src/components/Sidebar/index.css
+++ b/src/components/Sidebar/index.css
@@ -1,14 +1,14 @@
 .navbar_menu{
-    @apply min-w-full md:h-screen md:min-w-20 fixed top-0 bg-custom-teal transition-all ease-linear duration-500
+    @apply min-w-full md:h-screen md:min-w-20 fixed top-0 bg-custom-teal transition-all ease-linear duration-300
     flex flex-col flex-nowrap z-10
 }
 
 .burger{
-    @apply flex justify-end
+    @apply flex justify-end 
 }
 
 .burger .icon{
-    @apply p-2 cursor-pointer 
+    @apply p-2 cursor-pointer hover:bg-custom-dk-gray/10 
 }
 
 .menuIcon{
@@ -16,16 +16,16 @@
 }
 
 .navbar_list{
-    @apply h-full w-full list-none mx-auto  flex flex-col justify-center
+    @apply h-full w-full list-none mx-auto flex flex-col justify-center gap-5
 }
 
 .navbar_list li{
-    @apply mt-5 hover:border-l-8 hover:border-l-custom-yellow hover:bg-custom-dk-gray 
+    @apply py-3 px-4 flex flex-nowrap justify-center md:block hover:border-l-8 hover:border-l-custom-yellow hover:bg-custom-dk-gray 
 }
 
 .navbar_li_box{
-    @apply h-10 mt-4 cursor-pointer flex flex-row flex-nowrap justify-evenly align-middle 
-    group-hover:underline group-hover:text-custom-yellow
+    @apply min-h-10 mx-auto cursor-pointer
+    relative left-4 top-2 md:top-0 group-hover:underline group-hover:text-custom-yellow
 }
 
 .navbar_li_box span{
